# hr-rag

./: .env.example  .gitignore  AUDIT_FIX_REPORT_TH.md  AUDIT_REPORT.md  CLAUDE.md  DEPLOYMENT.md  PROJECT.md  README.md  SECURITY_AUDIT.md  docker-compose.yml  nginx.conf  setup-ssl.sh
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py
backend/app/api/: auth.py  chat.py  documents.py  keys.py  projects.py
backend/app/core/: celery_app.py  circuit_breaker.py  config.py  logging.py  metrics.py  request_id.py  security.py  telemetry.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/routers/: __init__.py  admin.py  advanced_retrieval.py  auth.py  chat.py  documents.py  evaluation.py  graph_rag.py  ingest.py  llm.py  notebook.py  observability.py  ocr.py  projects.py  search.py  search_chat.py  skills.py  swarm.py
backend/app/services/: __init__.py  advanced_retrieval.py  agent_swarm.py  cache.py  chat_graph.py  chat_nodes.py  chat_state.py  document_generation.py  document_loaders.py  embeddings.py  evaluation.py  file_processor.py  graph_rag.py  human_in_the_loop.py  knowledge_base.py  llm_providers.py  mcp_notebooklm.py  mcp_ocr.py  mcp_research.py  multi_hop_rag.py  neo4j_graph.py  observability.py  rag_chain.py  skill_manager.py  text_splitters.py  thai_chunking.py  vector_store.py  vector_store_langchain.py
backend/app/services/llm/: __init__.py  anthropic.py  base.py  custom.py  deepseek.py  factory.py  glm.py  google.py  kimi.py  langchain_service.py  minimax.py  ollama.py  openai.py  qwen.py  service.py
backend/app/services/memory/: __init__.py
backend/app/tasks/: __init__.py  document_tasks.py  embedding_tasks.py  maintenance_tasks.py  report_tasks.py
backend/app/tools/: __init__.py
backend/skills/memory_exporter/: README.md  skill.json
backend/skills/memory_exporter/src/: main.py
backend/skills/task_summarizer/: README.md  skill.json
backend/skills/task_summarizer/src/: main.py
backend/tests/: __init__.py  conftest.py  test_advanced_retrieval.py  test_auth.py  test_chat.py  test_chat_graph.py  test_circuit_breaker.py  test_langchain_service.py  test_rag_chain.py  test_request_id.py  test_search.py  test_utils.py
database/: schema.sql  seed.sql
docs/: DEPLOYMENT_LANGCHAIN.md  admin-panel.md  api-reference.md  architecture.md  deployment.md  evaluation.md  security.md  thai-embedding-guide.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
(+70 files in other folders)
