[project]
name = "hr-rag"
version = "0.1.0"
description = "HR-RAG: AI-powered HR Knowledge Assistant with LangChain, LangGraph, and FastMCP"
authors = ["HR-Moj Team"]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    
    # Data Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    
    # Database (TiDB Cloud - MySQL compatible)
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Vector Database
    "qdrant-client>=1.10.0",
    
    # Embeddings (Thai multilingual)
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pythainlp>=5.0.0",
    
    # File Processing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.2",
    "python-magic-bin>=0.4.14",
    
    # HTTP Client
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    
    # Rate Limiting
    "slowapi>=0.1.9",
    
    # Logging
    "structlog>=24.1.0",
    
    # ============================================================
    # LangChain Ecosystem (NEW)
    # ============================================================
    
    # Core LangChain
    "langchain>=0.3.20",
    "langchain-core>=0.3.40",
    "langchain-community>=0.3.20",
    
    # LangChain Integrations
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-redis>=0.2.0",
    
    # LangGraph (Stateful Workflow)
    "langgraph>=0.3.0",
    "langgraph-checkpoint-redis>=0.1.0",
    
    # FastMCP (Model Context Protocol)
    "fastmcp>=2.0.0",
    
    # LLM Providers (Direct API)
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.7.0",
    
    # ============================================================
    # Testing
    # ============================================================
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
